# bouffalo-hal

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MULAN  README.en.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: Cargo.yml
bl-rom-rt/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
bl-rom-rt/examples/blinky-bl616/: Cargo.toml
bl-rom-rt/examples/blinky-bl616/src/: main.rs
bl-rom-rt/examples/blinky-bl808/: Cargo.toml
bl-rom-rt/examples/blinky-bl808/src/: main.rs
bl-rom-rt/macros/: Cargo.toml
bl-rom-rt/macros/src/: lib.rs
bl-rom-rt/src/: lib.rs  macros.rs  soc.rs
bl-rom-rt/src/soc/: bl616.rs  bl702.rs  bl808.rs
bl-soc/: Cargo.toml  README.md
bl-soc/src/: gpio.rs  ir.rs  lib.rs  pwm.rs  timer.rs  uart.rs
blri/: Cargo.toml  README.md
blri/ci/: test_elf2bin.sh
blri/src/: isp.rs  lib.rs  main.rs  settings.rs
blri/tests/: test_elf2bin.rs  test_image_fuse.rs
blri/tests/elf2bin/: README.md
blri/tests/elf2bin/elf/: gpio-demo  i2c-demo  jtag-demo  lz4d-demo  psram-demo  pwm-demo  sdcard-demo  sdcard-gpt-demo  sdh-demo  spi-demo  uart-async-demo  uart-cli-demo  uart-demo  uart-dma-demo
bouffalo-hal/: Cargo.toml  README.md
bouffalo-hal/src/: clocks.rs  dbi.rs  dma.rs  efuse.rs  emac.rs  gpio.rs  gpip.rs  hbn.rs  i2c.rs  i2s.rs  ir.rs  jtag.rs  lib.rs  lz4d.rs  pds.rs  psram.rs  pwm.rs  sdio.rs  spi.rs  uart.rs
bouffalo-hal/src/audio/: mod.rs
bouffalo-hal/src/clocks/: mod.rs  v1.rs  v2.rs
bouffalo-hal/src/dma/: channel.rs  config.rs  mod.rs  register.rs
bouffalo-hal/src/efuse/: operation.rs  register.rs  trim_config.rs
bouffalo-hal/src/glb/: mod.rs  v1.rs  v2.rs
bouffalo-hal/src/gpio/: alternate.rs  convert.rs  disabled.rs  flex_pad.rs  gpio_group.rs  input.rs  mod.rs  output.rs  pad_dummy.rs  pad_v1.rs  pad_v2.rs  typestate.rs
bouffalo-hal/src/gpip/: adc.rs  asynch.rs  register.rs
bouffalo-hal/src/i2c/: blocking.rs  mod.rs  pads.rs  register.rs
bouffalo-hal/src/lz4d/: mod.rs  register.rs
bouffalo-hal/src/pds/: register.rs
bouffalo-hal/src/pwm/: channel.rs  mod.rs  pads.rs  pwm_pad.rs  register.rs  signal.rs
bouffalo-hal/src/sdio/: config.rs  dma_sdh.rs  nodma_sdh.rs  ops.rs  pad.rs  register.rs  sdcard.rs
bouffalo-hal/src/sec/: aes.rs  cdet.rs  gmac.rs  mod.rs  pka.rs  sha.rs  trng.rs
bouffalo-hal/src/spi/: master.rs  mod.rs  pads.rs  register.rs
bouffalo-hal/src/uart/: asynch.rs  blocking.rs  config.rs  error.rs  mod.rs  mux.rs  pad.rs  register.rs  signal.rs
bouffalo-hal/src/usb/: mod.rs  v1.rs
bouffalo-rt/: CHANGELOG.md  Cargo.toml  README.md  build.rs
bouffalo-rt/docs/fused_image_diff/: d0_diff.txt  m0_diff.txt  m0_flag_diff.txt
bouffalo-rt/examples/blinky-bl616/: Cargo.toml  README.md
bouffalo-rt/examples/blinky-bl616/src/: main.rs
bouffalo-rt/examples/blinky-bl808/: Cargo.toml  README.md
bouffalo-rt/examples/blinky-bl808/src/: main.rs
bouffalo-rt/macros/: Cargo.toml
bouffalo-rt/macros/src/: lib.rs  soc.rs
bouffalo-rt/macros/src/soc/: bl808.rs
bouffalo-rt/src/: arch.rs  lib.rs  macros.rs  soc.rs
bouffalo-rt/src/arch/: rve.rs  rvi.rs
bouffalo-rt/src/soc/: bl602.rs  bl616.rs  bl702.rs  bl808.rs
bouffalo-rt/src/soc/bl602/: peripheral.rs
bouffalo-rt/src/soc/bl616/: image_header.rs  peripheral.rs
bouffalo-rt/src/soc/bl702/: image_header.rs  peripheral.rs
bouffalo-rt/src/soc/bl808/: image_header.rs  peripheral.rs
bouffalo-rt/tests/: image_diff.rs
examples/: README.md  blinky-bl808-m0.rs  blinky-bl808.rs  jtag-bl808-d0.rs
examples/baremetal-bl808-d0/: Cargo.toml  build.rs
examples/baremetal-bl808-m0/: Cargo.toml  build.rs
examples/blinky-bl616/: Cargo.toml
examples/blinky-bl616/src/: main.rs
examples/blinky-bl808/: Cargo.toml
examples/blinky-bl808/src/: main.rs
examples/bouffaloader/: Cargo.toml  LICENSE  README.md
examples/gpio-demo/: Cargo.toml
examples/gpio-demo/src/: main.rs
examples/i2c-demo/: Cargo.toml
examples/jtag-demo/: Cargo.toml
examples/jtag-demo/src/: main.rs
examples/multicore-demo/dsp/: Cargo.toml
examples/multicore-demo/dsp/src/: main.rs
examples/multicore/multicore-demo/dsp/: Cargo.toml
examples/multicore/multicore-demo/dsp/src/: main.rs
examples/multicore/multicore-demo/mcu/: Cargo.toml
examples/multicore/multicore-demo/mcu/src/: main.rs
examples/peripherals/adc-poll-diff-demo/: Cargo.toml  README.md
examples/peripherals/adc-poll-diff-demo/src/: main.rs
examples/peripherals/gpio-demo/: Cargo.toml  README.md
examples/peripherals/gpio-demo/src/: main.rs
examples/peripherals/i2c-screen-demo/: Cargo.toml  README.md
examples/peripherals/i2c-screen-demo/src/: main.rs
examples/peripherals/jtag-demo/: Cargo.toml  README.md
examples/peripherals/jtag-demo/src/: main.rs
examples/peripherals/lz4d-demo/: Cargo.toml  README.md
examples/peripherals/lz4d-demo/src/: main.rs  text.lz4
examples/peripherals/sdcard-demo/: Cargo.toml  README.md
examples/peripherals/sdcard-demo/src/: main.rs
examples/peripherals/sdcard-gpt-demo/: Cargo.toml  README.md
examples/peripherals/sdcard-gpt-demo/src/: main.rs
examples/peripherals/sdh-demo/: Cargo.toml  README.md
examples/peripherals/sdh-demo/src/: main.rs  sdh.rs
examples/peripherals/spi-demo/: Cargo.toml  README.md  build.rs
examples/peripherals/spi-demo/src/: main.rs
examples/peripherals/uart-bl616-demo/: Cargo.toml  README.md
examples/peripherals/uart-bl616-demo/src/: main.rs
examples/peripherals/uart-cli-demo/: Cargo.toml  README.md
examples/peripherals/uart-cli-demo/src/: main.rs
examples/peripherals/uart-demo/: Cargo.toml  README.md
examples/peripherals/uart-demo/src/: main.rs
examples/peripherals/uart-dma-demo/: Cargo.toml  README.md
examples/peripherals/uart-dma-demo/src/: main.rs
examples/spi-demo/: Cargo.toml
examples/spi-demo/src/: main.rs
macros/: Cargo.toml
src/: audac.rs  clocks.rs  config.rs  device.rs  dma.rs  emac.rs  error.rs  glb.rs  glb_v1.rs  glb_v2.rs  gpio.rs  i2c.rs  i2s.rs  jtag.rs  lib.rs  lz4d.rs  main.rs  psram.rs  pwm.rs  sdcard.rs  sdio.rs  ser.rs  soc.rs  spi.rs  uart.rs
tests/: file_check.rs  file_process.rs
(+70 files in other folders)
