[package]
name = "bouffaloader"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { git = "https://github.com/rustsbi/bouffalo-hal", rev = "968b949", features = [
    "bl808",
] }
bouffalo-rt = { git = "https://github.com/rustsbi/bouffalo-hal", rev = "968b949", features = [
    "bl808-dsp",
] }
panic-halt = "1.0.0"
embedded-time = "0.12.1"
embedded-cli = "0.2.1"
embedded-io = "0.6.1"
embedded-hal = "1.0.0"
heapless = { version = "0.8.0", features = ["serde"] }
riscv = "0.12.1"
embedded-sdmmc = "0.8.1"
picotoml = { git = "https://github.com/rustsbi/poplar", branch = "refactor/riscv", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-device-tree = { git = "https://github.com/rustsbi/serde-device-tree", default-features = false, features = ["ser"]}

[[bin]]
name = "bouffaloader"
test = false
bench = false

[lib]
name = "bouffaloader"
test = false
bench = false
