[workspace]
members = [
    "bouffalo-rt",
    "bouffalo-rt/macros",
    "bouffalo-hal",
    "blri",
    "bouffalo-rt/examples/blinky-bl808",
    "bouffalo-rt/examples/blinky-bl616",
    "examples/bouffaloader",
    "examples/multicore/multicore-demo/mcu",
    "examples/multicore/multicore-demo/dsp",
    "examples/peripherals/gpio-demo",
    "examples/peripherals/i2c-demo",
    "examples/peripherals/jtag-demo",
    "examples/peripherals/lz4d-demo",
    "examples/peripherals/pwm-demo",
    "examples/peripherals/spi-demo",
    "examples/peripherals/uart-demo",
    "examples/peripherals/uart-async-demo",
    "examples/peripherals/uart-cli-demo",
    "examples/peripherals/uart-dma-demo",
    "examples/peripherals/sdcard-demo",
    "examples/peripherals/sdcard-gpt-demo",
    "examples/peripherals/psram-demo",
    "examples/peripherals/sdh-demo",
    "examples/peripherals/sdh-dma-demo",
]
resolver = "3"
