[package]
name = "bl-rom-rt"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-rom-rt-macros = { path = "macros" }
bl-soc = { version = "0.0.0", path = "../bl-soc" }
crc = "3.0.1"
cfg-if = "1.0.0"
base-address = "0.0.0"
embedded-time = "0.12.1"
plic = "0.0.2"

[dev-dependencies]
memoffset = "0.8.0"

[features]
default = []
# BL616 and BL618 chip series.
bl616 = ["bl-soc/bl616", "bl-rom-rt-macros/bl616"]
# BL808 chip.
bl808-mcu = ["bl-soc/bl808", "bl-rom-rt-macros/bl808-mcu"]
bl808-dsp = ["bl-soc/bl808", "bl-rom-rt-macros/bl808-dsp"]
bl808-lp = ["bl-soc/bl808", "bl-rom-rt-macros/bl808-lp"]
# BL702, BL704 and BL706 chip series.
bl702 = ["bl-soc/bl702", "bl-rom-rt-macros/bl702"]
