[package]
name = "blri"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.18", features = ["derive"] }
crc = "3.2.1"
sha2 = "0.10.8"
thiserror = "2.0.3"
inquire = "0.7.5"
serialport = { version = "4.3", default-features = false }
object = "0.36.7"
same-file = "1.0.6"
bouffalo-rt = { path = "../bouffalo-rt", features = ["image_fuse"] }
ctrlc = "3.4"
crossterm = "0.27"
colored = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
home = "0.5"

[dev-dependencies]
tempfile = "3.12.0"
