[package]
name = "bouffalo-hal"
version = "0.0.0"
authors = [
    "Mingrui Ma <m202271767@hust.edu.cn>",
    "Zeqing Qin <zeqing@hust.edu.cn>",
]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register = "0.2.1"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
embedded-time = "0.12.1"
cfg-if = "1.0.0"
as-slice = "0.2.1"
nb = "1.1.0"
# For backward compatibility only. 
embedded-hal-027 = { package = "embedded-hal", version = "0.2.7" }
embedded-io-async = "0.6.1"
atomic-waker = "1.1.2"
embedded-sdmmc = "0.8.1"

[dev-dependencies]

[features]
default = []
bl602 = ["glb-v1"]
bl616 = ["glb-v2"]
bl702 = ["glb-v1"]
bl808 = ["glb-v2"]
glb-v1 = []
glb-v2 = []
