[package]
name = "bouffalo-rt"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-rt-macros = { path = "macros" }
bouffalo-hal = { version = "0.0.0", path = "../bouffalo-hal" }
crc = "3.2.1"
cfg-if = "1.0.0"
embedded-time = "0.12.1"
plic = "0.0.2"
xuantie-riscv = { git = "https://github.com/rustsbi/xuantie", rev = "fe7ec712" }

[dev-dependencies]
memoffset = "0.9.1"

[features]
default = []
# BL616 and BL618 chip series.
bl616 = ["bouffalo-hal/bl616", "bouffalo-rt-macros/bl616"]
# BL808 chip.
bl808-mcu = ["bouffalo-hal/bl808", "bouffalo-rt-macros/bl808-mcu"]
bl808-dsp = ["bouffalo-hal/bl808", "bouffalo-rt-macros/bl808-dsp"]
bl808-lp = ["bouffalo-hal/bl808", "bouffalo-rt-macros/bl808-lp"]
# BL702, BL704 and BL706 chip series.
bl702 = ["bouffalo-hal/bl702", "bouffalo-rt-macros/bl702"]
