[package]
name = "blinky-bl616"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-rom-rt = { path = "../.." }
panic-halt = "0.2.0"

[features]
default = ["bl616"]
bl616 = ["bl-rom-rt/bl616"]
