[package]
name = "blinky-bl808"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-rom-rt = { path = "../.." }
embedded-hal = "1.0.0-rc.1"
panic-halt = "0.2.0"

[features]
default = ["bl808-d0"]
bl808-d0 = ["bl-rom-rt/bl808-d0"]
bl808-m0 = ["bl-rom-rt/bl808-m0"]
