[package]
name = "blinky-bl808"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-rom-rt = { path = "../.." }
embedded-hal = "1.0.0-rc.1"
panic-halt = "0.2.0"
riscv = "0.10.1"

[features]
default = ["bl808-dsp"]
bl808-dsp = ["bl-rom-rt/bl808-dsp"]
bl808-mcu = ["bl-rom-rt/bl808-mcu"]
