[package]
name = "blinky-bl616"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-rt = { path = "../..", features = ["bl616"]}
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
riscv = "0.11.1"
