[package]
name = "blinky-bl616"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-rt = { version = "0.0.0", path = "../..", features = ["bl616"] }
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
riscv = "0.13.0"

[[bin]]
name = "blinky-bl616"
test = false
