[package]
name = "blinky-bl808"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-rt = { path = "../.." }
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
riscv = "0.12.1"

[features]
default = ["bl808-dsp"]
bl808-dsp = ["bouffalo-rt/bl808-dsp"]
bl808-mcu = ["bouffalo-rt/bl808-mcu"]

[[bin]]
name = "blinky-bl808"
test = false
