[package]
name = "adc-poll-diff-demo"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../bouffalo-hal", features = ["bl808"] }
bouffalo-rt = { path = "../../../bouffalo-rt", features = ["bl808-mcu"] }
panic-halt = "1.0.0"
embedded-time = "0.12.1"
riscv = "0.13.0"

[[bin]]
name = "adc-poll-diff-demo"
test = false
