[package]
name = "i2c-screen-demo"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../bouffalo-hal", features = ["bl808"] }
bouffalo-rt = { path = "../../../bouffalo-rt", features = ["bl808-dsp"] }
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
riscv = "0.13.0"
cst816s = "1.0.1"
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"

[[bin]]
name = "i2c-screen-demo"
test = false
