[package]
name = "jtag-demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../bouffalo-hal", features = ["bl808"] }
bl-rom-rt = { path = "../../../bl-rom-rt", features = ["bl808-dsp"] }
panic-halt = "0.2.0"
riscv = "0.11.0"
