[package]
name = "sdh-demo"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../bouffalo-hal", features = ["bl808"] }
bouffalo-rt = { path = "../../../bouffalo-rt", features = ["bl808-dsp"] }
panic-halt = "1.0.0"
embedded-time = "0.12.1"
embedded-io = "0.6.1"
embedded-sdmmc = "0.8.1"
embedded-hal = "1.0.0"
riscv = "0.12.1"

[[bin]]
name = "sdh-demo"
test = false
