[package]
name = "uart-cli-demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../bouffalo-hal", features = ["bl808"] }
bouffalo-rt = { path = "../../../bouffalo-rt", features = ["bl808-dsp"] }
panic-halt = "1.0.0"
embedded-time = "0.12.1"
embedded-cli = "0.2.1"

[[bin]]
name = "uart-cli-demo"
test = false
