[package]
name = "uart-demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-soc = { path = "../../..", features = ["bl808"] }
base-address = "0.0.0"
panic-halt = "0.2.0"
embedded-time = "0.12.1"

[dependencies.bl-rom-rt]
git = "https://gitee.com/rustsbi/bl-rom-rt"
branch = "main"
default-features = false
features = ["bl808-dsp"]
 