[package]
name = "multicore-demo-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../../bouffalo-hal", features = ["bl808"] }
panic-halt = "0.2.0"
embedded-time = "0.12.1"
riscv = "0.11.1"

[dependencies.bl-rom-rt]
path = "../../../../bl-rom-rt"
default-features = false
features = ["bl808-dsp"]
