[package]
name = "multicore-demo-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../../bouffalo-hal", features = ["bl808"] }
panic-halt = "1.0.0"
embedded-time = "0.12.1"
riscv = "0.12.1"

[dependencies.bouffalo-rt]
path = "../../../../bouffalo-rt"
default-features = false
features = ["bl808-dsp"]

[[bin]]
name = "multicore-demo-dsp"
test = false
