[package]
name = "multicore-demo-mcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl-soc = { path = "../../../../bl-soc", features = ["bl808"] }
panic-halt = "0.2.0"
riscv = "0.11.0"

[dependencies.bl-rom-rt]
path = "../../../../bl-rom-rt"
default-features = false
features = ["bl808-mcu"]
