[package]
name = "multicore-demo-mcu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bouffalo-hal = { path = "../../../../bouffalo-hal", features = ["bl808"] }
panic-halt = "1.0.0"
riscv = "0.13.0"

[dependencies.bouffalo-rt]
path = "../../../../bouffalo-rt"
default-features = false
features = ["bl808-mcu"]

[[bin]]
name = "multicore-demo-mcu"
test = false
